--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-router": "^1.76.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
@@ -25,6 +26,8 @@
     "@rspack/cli": "^1.0.14",
     "@rspack/core": "^1.0.14",
     "@rspack/plugin-react-refresh": "1.0.0",
+    "@tanstack/router-devtools": "^1.76.3",
+    "@tanstack/router-plugin": "^1.76.0",
     "@types/node": "^22.8.1",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
